k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: OrderService
spec:
  replicas: 1
  selector:
    matchLabels:
      app: OrderService
  template:
    metadata:
      labels:
        app: OrderService
    spec:
      containers:
        - name: OrderService
          image: order-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
