k8s/OrderService.yaml
apiVersion: v1
kind: Service
metadata:
  name: OrderService
spec:
  selector:
    app: OrderService
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
