k8s/PaymentService.yaml
apiVersion: v1
kind: Service
metadata:
  name: PaymentService
spec:
  selector:
    app: PaymentService
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
